He agregado un git ignore

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head lang="es">
 	<meta charset="utf-8">
-	<title>Prueba Git </title>
+	<title> Prueba Git </title>
 </head>
 	<body>
+		<div>
+			
+		</div>
+		
 
-
+		
 	</body>
-	</html>
+</html>
